syntax = "proto3";

message CounterAdded {
	string name = 1;
}