syntax = "proto3";

message CounterDecremented { }